category tree fixed